Este es una actualización de la card principal de información

--- a/index.html
+++ b/index.html
@@ -23,9 +23,43 @@
                     <div class="info">
                         <img src="img/general-icons/house-solid.svg" alt="house-solid">
                     </div>
+                    <a href="https://leiker2.github.io/">https://leiker2.github.io/</a>
+                    
+                </div>
+                <div class="info-profile">
                     <div class="info">
-                        <img src="img/general-icons/house-solid.svg" alt="house-solid">
+                        <img src="img/general-icons/envelope-solid.svg" alt="email-img">
                     </div>
+                    <p>leiker.dgs@gmail.com</p>
+                </div>
+                <div class="info-profile">
+                    <div class="info">
+                        <img src="img/general-icons/phone-solid.svg" alt="phone-solid">
+                    </div>
+                    <p>+58 (0424) 185 9806</p>
+                </div>
+                <div class="info-profile">
+                    <div class="info">
+                        <img src="img/general-icons/location-dot-solid.svg" alt="location-solid">
+                    </div>
+                    <p>Caracas, VE</p>
+                </div>
+                <div class="info-rrss">
+                    <a href="">
+                        <img src="img/social-icons/instagram.svg" alt="ig-icon">
+                    </a>
+                    <a href="">
+                        <img src="img/social-icons/facebook.svg" alt="fb-icon">
+                    </a>
+                    <a href="">
+                        <img src="img/social-icons/twitter.svg" alt="tw-icon">
+                    </a>
+                    <a href="">
+                        <img src="img/social-icons/github.svg" alt="gh-icon">
+                    </a>
+                    <a href="">
+                        <img src="img/social-icons/linkedin-in.svg" alt="gh-icon">
+                    </a>
                 </div>
             </div>
         </section>
