--- a/index.html
+++ b/index.html
@@ -45,21 +45,31 @@
                     <p>Caracas, VE</p>
                 </div>
                 <div class="info-rrss">
-                    <a href="">
-                        <img src="img/social-icons/instagram.svg" alt="ig-icon">
-                    </a>
-                    <a href="">
-                        <img src="img/social-icons/facebook.svg" alt="fb-icon">
-                    </a>
-                    <a href="">
-                        <img src="img/social-icons/twitter.svg" alt="tw-icon">
-                    </a>
-                    <a href="">
-                        <img src="img/social-icons/github.svg" alt="gh-icon">
-                    </a>
-                    <a href="">
-                        <img src="img/social-icons/linkedin-in.svg" alt="gh-icon">
-                    </a>
+                    <div class="icon-rrss">
+                        <a href="">
+                            <img src="img/social-icons/instagram.svg" alt="ig-icon">
+                        </a>
+                    </div>
+                    <div class="icon-rrss">
+                        <a href="">
+                            <img src="img/social-icons/facebook.svg" alt="fb-icon">
+                        </a>
+                    </div>
+                    <div class="icon-rrss">
+                        <a href="">
+                            <img src="img/social-icons/twitter.svg" alt="tw-icon">
+                        </a>
+                    </div>
+                    <div class="icon-rrss">
+                        <a href="">
+                            <img src="img/social-icons/github.svg" alt="gh-icon">
+                        </a>
+                    </div>
+                    <div class="icon-rrss">
+                        <a href="">
+                            <img src="img/social-icons/linkedin-in.svg" alt="gh-icon">
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
