Haciedo prácticamente el último commit a editable para hacer merge y montar mi página princpal

--- a/index.html
+++ b/index.html
@@ -76,7 +76,14 @@
 
         <!-- Here are my description. -->
         <aside>
-            
+            <div class="bodyDescription">
+                <div class="card2">
+                    <h1>Aprende un poco sobre mi</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum finibus arcu nec viverra tristique. Nullam finibus luctus dapibus. Ut commodo id massa at hendrerit. Nunc bibendum porta pellentesque. Donec placerat pretium arcu, et aliquam dolor pretium non. Aenean non erat a mi consectetur laoreet. Nam imperdiet eu lacus id rutrum. Sed imperdiet metus rhoncus varius tempus. Etiam molestie ex non vehicula congue. Sed scelerisque aliquet justo ut egestas. Sed ultricies, eros et efficitur ultrices, tortor enim sodales leo, eu viverra felis sapien et purus. Ut sem risus, gravida non diam non, lacinia posuere odio. Nulla lacinia malesuada ultricies. Praesent dolor nulla, semper in metus vitae, efficitur finibus ipsum. Proin feugiat commodo urna ut viverra. Cras sed posuere urna, vitae sodales erat.
+
+                    </p>
+            </div>
+            </div>    
         </aside>
     </div>
 </body>
