Esta esta una pequena modificacion al index, quiero que tenga enlace a los proyectos echos en platzi

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum finibus arcu nec viverra tristique. Nullam finibus luctus dapibus. Ut commodo id massa at hendrerit. Nunc bibendum porta pellentesque. Donec placerat pretium arcu, et aliquam dolor pretium non. Aenean non erat a mi consectetur laoreet. Nam imperdiet eu lacus id rutrum. Sed imperdiet metus rhoncus varius tempus. Etiam molestie ex non vehicula congue. Sed scelerisque aliquet justo ut egestas. Sed ultricies, eros et efficitur ultrices, tortor enim sodales leo, eu viverra felis sapien et purus. Ut sem risus, gravida non diam non, lacinia posuere odio. Nulla lacinia malesuada ultricies. Praesent dolor nulla, semper in metus vitae, efficitur finibus ipsum. Proin feugiat commodo urna ut viverra. Cras sed posuere urna, vitae sodales erat.
 
                     </p>
+                    <p>Ac&aacute; tienes el enlace para mis proyectos:</p>
+                    <ul>
+                        <li class="projects-link"><a href="huddle.html">Huddle</a></li>
+                        <li class="projects-link"><a href="yard_sale.html">Yard Sale</a></li>
+                    </ul>
             </div>
             </div>    
         </aside>
