--- a/email-sent.html
+++ b/email-sent.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/email-page.css">
+    <link rel="stylesheet" href="css/email-pages.css">
     <link rel="stylesheet" href="css/variables.css">
 </head>
 <body>
