--- a/edit-account.html
+++ b/edit-account.html
@@ -15,16 +15,16 @@
                 <div>
                 <h1 class="title title-account">My account</h1>
                 <label for="name" class="label">Name</label>
-                <input type="text" id="name" placeholder="Leiker Gomez" class="input input-name">
+                <p class="value"> Camila Yokoo</p>
 
                 <label for="email" class="label">Email</label>
-                <input type="email" id="email" placeholder="yard-sales@example.com" class="input input-email">
+                <p class="value">camilayokoo@gmail.com</p>
 
                 <label for="password" class="label">Password</label>
-                <input type="password" id="password" placeholder="*********" class="input input-password">
-                </div>
+                <p class="value">*********</p>                
+            </div>
 
-                <input type="submit" value="Create" class="primary-button login-button create-button">
+            <input type="submit" value="Save" class="secondary-button login-button create-button">
             </form>
         </div>
     </div>
