Agregando pequenas modificaciones

--- a/index.html
+++ b/index.html
@@ -8,88 +8,17 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="page">
-
-        <!-- Here are my profile card -->
-        <section>
-            <div class="card">
-                <div class="photo-profile">
-                    <img src="img/photo-profile/photo-profile.svg" alt="photo-profile">
-                </div>
-                <h1>Leiker Gómez</h1>
-                <p>Developer Full stack</p>
-                <div class="line"></div>
-                <div class="info-profile">
-                    <div class="info">
-                        <img src="img/general-icons/house-solid.svg" alt="house-solid">
-                    </div>
-                    <a href="https://leiker2.github.io/">https://leiker2.github.io/</a>
-                    
-                </div>
-                <div class="info-profile">
-                    <div class="info">
-                        <img src="img/general-icons/envelope-solid.svg" alt="email-img">
-                    </div>
-                    <p>leiker.dgs@gmail.com</p>
-                </div>
-                <div class="info-profile">
-                    <div class="info">
-                        <img src="img/general-icons/phone-solid.svg" alt="phone-solid">
-                    </div>
-                    <p>+58 (0424) 185 9806</p>
-                </div>
-                <div class="info-profile">
-                    <div class="info">
-                        <img src="img/general-icons/location-dot-solid.svg" alt="location-solid">
-                    </div>
-                    <p>Caracas, VE</p>
-                </div>
-                <div class="info-rrss">
-                    <div class="icon-rrss">
-                        <a href="">
-                            <img src="img/social-icons/instagram.svg" alt="ig-icon">
-                        </a>
-                    </div>
-                    <div class="icon-rrss">
-                        <a href="">
-                            <img src="img/social-icons/facebook.svg" alt="fb-icon">
-                        </a>
-                    </div>
-                    <div class="icon-rrss">
-                        <a href="">
-                            <img src="img/social-icons/twitter.svg" alt="tw-icon">
-                        </a>
-                    </div>
-                    <div class="icon-rrss">
-                        <a href="">
-                            <img src="img/social-icons/github.svg" alt="gh-icon">
-                        </a>
-                    </div>
-                    <div class="icon-rrss">
-                        <a href="">
-                            <img src="img/social-icons/linkedin-in.svg" alt="gh-icon">
-                        </a>
-                    </div>
-                </div>
+    <section class="body-container">
+        <section class="left-container">
+            <div class="container-profile">
+                <img src="img/photo-profile/photo-profile.svg" alt="photo-profile" class="photo-profile">
+                <p>hola</p>
             </div>
         </section>
+        <aside class="rigth-container">
 
-        <!-- Here are my description. -->
-        <aside>
-            <div class="bodyDescription">
-                <div class="card2">
-                    <h1>Aprende un poco sobre mi</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum finibus arcu nec viverra tristique. Nullam finibus luctus dapibus. Ut commodo id massa at hendrerit. Nunc bibendum porta pellentesque. Donec placerat pretium arcu, et aliquam dolor pretium non. Aenean non erat a mi consectetur laoreet. Nam imperdiet eu lacus id rutrum. Sed imperdiet metus rhoncus varius tempus. Etiam molestie ex non vehicula congue. Sed scelerisque aliquet justo ut egestas. Sed ultricies, eros et efficitur ultrices, tortor enim sodales leo, eu viverra felis sapien et purus. Ut sem risus, gravida non diam non, lacinia posuere odio. Nulla lacinia malesuada ultricies. Praesent dolor nulla, semper in metus vitae, efficitur finibus ipsum. Proin feugiat commodo urna ut viverra. Cras sed posuere urna, vitae sodales erat.
-
-                    </p>
-                    <p>Ac&aacute; tienes el enlace para mis proyectos:</p>
-                    <ul>
-                        <li class="projects-link"><a href="huddle.html">Huddle</a></li>
-                        <li class="projects-link"><a href="yard_sale.html">Yard Sale</a></li>
-                    </ul>
-            </div>
-            </div>    
         </aside>
-    </div>
+
+    </section>
 </body>
 </html>
