arreglando para llegar al index a la version 2.0

--- a/index.html
+++ b/index.html
@@ -12,7 +12,43 @@
         <section class="left-container">
             <div class="container-profile">
                 <img src="img/photo-profile/photo-profile.svg" alt="photo-profile" class="photo-profile">
-                <p>hola</p>
+                <h1 class="title-name">Leiker G&oacute;mez</h1>
+                <span>Developer Full Stack</span>
+                <p class="line"></p>
+                <div class="container-info">
+                    <div class="info-profile">
+                        <figure class="icon-rrss">
+                            <img src="img/general-icons/house-solid.svg" alt="house-icon">
+                        </figure>
+                        <p class="description-rrss">
+                            <a href="https://leiker2.github.io/">https://leiker2.github.io/</a>
+                        </p>
+                    </div>
+                    <div class="info-profile">
+                        <figure class="icon-rrss">
+                            <img src="img/general-icons/envelope-solid.svg" alt="house-icon" class="icon">
+                        </figure>
+                        <p class="description-rrss">
+                            leiker.dgs@gmail.com
+                        </p>
+                    </div>
+                    <div class="info-profile">
+                        <figure class="icon-rrss">
+                            <img src="img/general-icons/phone-solid.svg" alt="house-icon">
+                        </figure>
+                        <p class="description-rrss">
+                            +34 624 71 3310
+                        </p>
+                    </div>
+                    <div class="info-profile">
+                        <figure class="icon-rrss">
+                            <img src="img/general-icons/location-dot-solid.svg" alt="house-icon">
+                        </figure>
+                        <p class="description-rrss">
+                            Madrid, Spain
+                        </p>
+                    </div>                    
+                </div>
             </div>
         </section>
         <aside class="rigth-container">
