Actualizando el index, rrss agregadas

--- a/index.html
+++ b/index.html
@@ -49,6 +49,36 @@
                         </p>
                     </div>                    
                 </div>
+                <div class="rrss-info">
+                    <ul>
+                        <li>
+                            <a href="">
+                                <img src="img/social-icons/twitter.svg" alt="twitter-icon">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="img/social-icons/instagram.svg" alt="twitter-icon">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="img/social-icons/github.svg" alt="twitter-icon">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="img/social-icons/facebook.svg" alt="twitter-icon">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="img/social-icons/linkedin-in.svg" alt="twitter-icon">
+                            </a>
+                        </li>
+                    </ul>
+
+                </div>
             </div>
         </section>
         <aside class="rigth-container">
