--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         </li>
                         <li>
                             <a href="">
-                                <img src="img/social-icons/facebook.svg" alt="twitter-icon">
+                                <img src="img/social-icons/facebook.svg" alt="twitter-icon" class="icon-fb">
                             </a>
                         </li>
                         <li>
@@ -82,7 +82,25 @@
             </div>
         </section>
         <aside class="rigth-container">
-
+            <div class="info-container">
+                <h1>Aprende un poco sobre mi</h1>
+                <p>Soy una persona proactiva y apasionada por la tecnolog&iacute;a, capaz de adaptarme f&aacute;cilmente al trabajo en equipo. Mi experiencia laboral me ha enseñado a trabajar bajo presi&oacute;n y a enfocarme en la eficacia y eficiencia en todas mis tareas. Tengo habilidades destacadas en la resoluci&oacute;n de problemas, an&aacute;lisis de datos y gesti&oacute;n de proyectos. Soy una persona con ganas de aprender y estoy constantemente actualizando mis conocimientos tecnol&oacute;gicos. Busco un entorno laboral desafiante y en constante evoluci&oacute;n, donde pueda aplicar mis habilidades y continuar creciendo profesionalmente.</p>
+            </div>
+            <div class="info-container">
+                <h1>Conoce mi portafolio</h1>
+                <ul>
+                    <li>
+                        <a href="huddle.html">
+                            <span>Huddle</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="yard_sale.html">
+                            <span>Yard Sale</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </aside>
 
     </section>
