Estos son cambios para diferenciar entre projectos

--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
                 <h1>Conoce mi portafolio</h1>
                 <ul>
                     <li>
-                        <a href="huddle.html">
+                        <a href="huddleProject/huddle.html">
                             <span>Huddle</span>
                         </a>
                     </li>
                     <li>
-                        <a href="yard_sale.html">
+                        <a href="yardProject/login-page.html">
                             <span>Yard Sale</span>
                         </a>
                     </li>
