--- a/DOM course/16-DOM.html
+++ b/DOM course/16-DOM.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Manipulacion del DOM basica</h1>
+    <h1 class = 'lg'>Manipulacion del DOM basica</h1>
     <p class="parrafito">Esto es un parrafo con clase</p>
     <p id="pid">Esto es un parrafo con id</p>
 
         <input type="text" placeholder="escribe algo aqui" value="123">
-    <script src="js/js-curso-basico/16-DOM.js"></script>
+    <script src="16-DOM.js"></script>
 </body>
 </html>
