Este es una actualizacion de CC page

--- a/ccProject/index.html
+++ b/ccProject/index.html
@@ -17,7 +17,7 @@
     <section>
         <div class="container">
             <h1 class="title">Background color :</h1>
-            <p class="colorHEX">#231E39</p>
+            <p class="colorHEX">rgb(35, 30, 57)</p>
         </div>
         <button class="button">Change color</button>
     </section>
