Agregando cc project a index

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
                             <span>Yard Sale</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="ccProject/index.html">
+                            <span>Color change</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </aside>
