Changes of simple counter, ready version stable

--- a/counterProject/index.html
+++ b/counterProject/index.html
@@ -12,15 +12,15 @@
     <main>
         <section>
             <h1>Counter</h1>
-            <p>0</p>
+            <p id="number">0</p>
             <ul>
-                <div class="button">
+                <div id="decrease" class="button">
                     <li>Decrease</li>
                 </div>
-                <div class="button">
+                <div id="reset" class="button">
                     <li>Reset</li>
                 </div>
-                <div class="button">
+                <div id="increase" class="button">
                     <li>Increase</li>
                 </div>
             </ul>
