--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
                             <span>Color change</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="counterProject/index.html">
+                            <span>Simple Counter</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </aside>
