--- a/yardProject/index.html
+++ b/yardProject/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav>
-        <img src="img/general-icons/yard-icons/icon_menu.svg"alt="menu"class="menu">
+        <img src="img/general-icons/yard-icons/icon_menu.svg" alt="menu" class="menu">
         <div class="navbar-left">
             <img src="img/logos/logo_yard_sale.svg" alt="logo" class="logo">
             <ul>
@@ -54,6 +54,47 @@
                 </li>
                 <li>
                     <a href="/">Sign out</a>
+                </li>
+            </ul>
+        </div>
+        <div class="mobile-menu inactive">
+            <ul>
+                <li>
+                    <a href="/">CATEGORIES</a>
+                </li>
+                <li>
+                    <a href="/">All</a>
+                </li>
+                <li>
+                    <a href="/">Clothes</a>
+                </li>
+                <li>
+                    <a href="/">Electronics</a>
+                </li>
+                <li>
+                    <a href="/">Furnitures</a>
+                </li>
+                <li>
+                    <a href="/">Toys</a>
+                </li>
+                <li>
+                    <a href="/">Others</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="/">My orders</a>
+                </li>
+                <li>
+                    <a href="/">My account</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="/" class="email">yard-sale@example.com</a>
+                </li>
+                <li>
+                    <a href="/" class="sign-out">Sign out</a>
                 </li>
             </ul>
         </div>
