--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="yardProject/login-page.html">
+                        <a href="yardProject/index.html">
                             <span>Yard Sale</span>
                         </a>
                     </li>
