--- a/index.html
+++ b/index.html
@@ -86,33 +86,19 @@
                 <h1>Aprende un poco sobre mi</h1>
                 <p>Soy una persona proactiva y apasionada por la tecnolog&iacute;a, capaz de adaptarme f&aacute;cilmente al trabajo en equipo. Mi experiencia laboral me ha enseñado a trabajar bajo presi&oacute;n y a enfocarme en la eficacia y eficiencia en todas mis tareas. Tengo habilidades destacadas en la resoluci&oacute;n de problemas, an&aacute;lisis de datos y gesti&oacute;n de proyectos. Soy una persona con ganas de aprender y estoy constantemente actualizando mis conocimientos tecnol&oacute;gicos. Busco un entorno laboral desafiante y en constante evoluci&oacute;n, donde pueda aplicar mis habilidades y continuar creciendo profesionalmente.</p>
             </div>
-            <div class="info-container">
-                <h1>Conoce mi portafolio</h1>
-                <ul>
-                    <li>
-                        <a href="huddleProject/huddle.html">
-                            <span>Huddle</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="yardProject/index.html">
-                            <span>Yard Sale</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="ccProject/index.html">
-                            <span>Color change</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="counterProject/index.html">
-                            <span>Simple Counter</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
         </aside>
-
     </section>
+    <!-- this is my portfolio -->
+    <section>
+        <div class="portfolio-container">
+            <div class="portfolio-container-left">
+                <p class="fade-in">Hola</p>
+            </div>
+            <div class="portfolio-container-rigth">
+                <img src="img/huddle.svg" alt="Hubble">
+            </div>
+        </div>
+    </section>
+    <script src="js/main.js"></script>
 </body>
 </html>
