this is a change of Leiker profile page

--- a/index.html
+++ b/index.html
@@ -88,16 +88,17 @@
             </div>
         </aside>
     </section>
+
     <!-- this is my portfolio -->
-    <section>
-        <div class="portfolio-container">
-            <div class="portfolio-container-left">
-                <p class="fade-in">Hola</p>
-            </div>
-            <div class="portfolio-container-rigth">
-                <img src="img/huddle.svg" alt="Hubble">
-            </div>
+    <div class="title-portfolio">
+        <div class="title-portfolio-sub">
+            <h1>Mi portafolio</h1>
         </div>
+    </div>
+
+    <!-- add all my projects -->
+    <section class="portfolio">
+        
     </section>
     <script src="js/main.js"></script>
 </body>
