here, commit before of add productInfo to interactive HTML

--- a/yardProject/index.html
+++ b/yardProject/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yard Sale | Landing page</title>
+
+    <link rel="stylesheet" href="css/info-product.css">
     <link rel="stylesheet" href="css/shopping-cart.css">
     <link rel="stylesheet" href="css/index-yard.css">
     <link rel="stylesheet" href="css/variables.css">
@@ -101,7 +103,7 @@
         </div>
     </nav>
 
-    <aside class="product-detail inactive">
+    <aside id="shoppingCartContainer" class="inactive">
         <div class="title-container">
           <img src="img/general-icons/yard-icons/flechita.svg" alt="arrow">
           <p class="title">My order</p>
@@ -161,10 +163,27 @@
           </button>
         </div>
       </div>
-      </aside>
+    </aside>
+
+    <!-- this is code info-product, click for open -->
+    <aside  id="productDetail" class="inactive">
+        <div class="product-detail-close">
+            <img src="img/general-icons/yard-icons/icon_close.png" alt="close">
+        </div>
+        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="bike">
+        <div class="product">
+            <p>$35,00</p>
+            <p>Bike</p>
+            <p>This sleek and stylish road bike is built for speed, with a lightweight aluminum frame, aerodynamic design, and Shimano Ultegra components for ultimate performance on the road.</p>
+            <button class="primary-button add-to-cart-button">
+                <img src="img/general-icons/yard-icons/bt_add_to_cart.svg" alt="add">
+                Add to cart
+            </button>
+        </div>
+    </aside>
 
       <!-- This is a seccion of products, and here are all products -->
-      <section class="main-container">
+    <section class="main-container">
         <div class="cards-container">
             <!-- <div class="product-card">
                 <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="product-img">
@@ -180,6 +199,8 @@
             </div> -->
         </div>
     </section>
+
+    <!-- script section -->
     <script src="js/main.js"></script>
 </body>
 </html>
