this is a version avanced for yard sale

--- a/yardProject/index.html
+++ b/yardProject/index.html
@@ -103,7 +103,7 @@
         </div>
     </nav>
 
-    <aside id="shoppingCartContainer" class="inactive">
+    <aside id="shoppingCartContainer" class="inactive aside-animation-rigth">
         <div class="title-container">
           <img src="img/general-icons/yard-icons/flechita.svg" alt="arrow">
           <p class="title">My order</p>
@@ -166,7 +166,7 @@
     </aside>
 
     <!-- this is code info-product, click for open -->
-    <aside  id="productDetail" class="inactive">
+    <aside  id="productDetail" class="inactive aside-animation-rigth">
         <div class="product-detail-close">
             <img src="img/general-icons/yard-icons/icon_close.png" alt="close">
         </div>
