add a new project to Leiker Page

--- a/OurReviewsProject/index.html
+++ b/OurReviewsProject/index.html
@@ -16,18 +16,25 @@
             <div class="line-primary"></div>
         </section>
         <section class="container-general">
+            <div class="container-comillas">
+                <div class="comillas">
+                </div>
+            </div>
             <div class="img-profile">
-                <img src="img/photo-profile.svg" alt="photo-profile">
+
             </div>
-            <h1>Leiker Gomez</h1>
-            <span>Web Designer</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex culpa ducimus nobis sequi enim! Incidunt, reiciendis nisi beatae maxime ex ipsa dolorum quae quasi aperiam fugiat et blanditiis, veritatis praesentium?</p>
+            <div class="info-employee">
+
+            </div>
             <div class="arrow-slide">
-                <figure><img src="img/icons/arrow-left-solid.svg" alt="arrow-left"></figure>
-                <figure><img src="img/icons/arrow-right-solid.svg" alt="arrow-left"></figure>
+                <figure class="btn-arrow-left"><img src="img/icons/arrow-left-solid.svg" alt="arrow-left"></figure>
+                <figure class="btn-arrow-rigth"><img src="img/icons/arrow-right-solid.svg" alt="arrow-left"></figure>
             </div>
+            <button class="surprise-me-button">
+                Surprise Me!
+            </button>
         </section>
     </div>
-
+    <script src="./js/logical.js"></script>
 </body>
 </html>
